[package]
name = "cat-surveillance-camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
env_logger = "0.9.3"
log = "0.4.17"
reqwest = {version="0.11.12", features=["blocking", "multipart"]}
rppal = "0.14.0"
